service-mesh-vs-ingress/assets/labs/03/https-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  # name: istio-ingressgateway
  name: mock-apps-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*"
    tls:
      mode: SIMPLE
      credentialName: cert-manager-cacerts
