service-mesh-vs-ingress/assets/labs/03/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mock-apps-gateway
spec:
  selector:
    istio: ingress-demo # istio-ingressgateway #ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-api-app
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/mock-apps-gateway # <namespace>/<name> format
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: backend-api
        port:
          number: 8080
        namespaceSelector:
          matchLabels:
            app: backend-api

# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: my-gateway
# spec:
#   selector:
#     istio: ingressgateway # use istio default ingress gateway
#   servers:
#   - port:
#       name: http
#       number: 80
#       protocol: HTTP
#     hosts:
#     - "*"
#   - port:
#       name: https
#       number: 443
#       protocol: HTTPS
#     tls:
#       mode: SIMPLE
#       privateKey: /etc/istio/ingressgateway-certs/tls.key
#       serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
#     hosts:
#     - "*"
