service-mesh-vs-ingress/assets/labs/03/virtualservices-for-default.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: greetings
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /api/v1/greetings
    route:
    - destination:
        host: greetings
        port:
          number: 9080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: order
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /api/v1/orders
    route:
    - destination:
        host: order
        port:
          number: 9080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: follow
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /api/v1/follow
    route:
    - destination:
        host: follow
        port:
          number: 9080
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: follow
spec:
  host: follow
  subsets:
  - name: v1
    labels:
      version: v1
