service-mesh-vs-ingress/assets/labs/03/virtualservices.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: follow
spec:
  hosts:
  - follow
  http:
    route:
    - destination:
        host: follow
        subset: v1
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: greetings
spec:
  hosts:
  - "*"
  gateways:
  - mock-apps-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: greetings
        port:
          number: 9080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: order
spec:
  hosts:
  - "*"
  gateways:
  - mock-apps-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: order
        port:
          number: 9080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: follow
spec:
  hosts:
  - "*"
  gateways:
  - mock-apps-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: follow
        port:
          number: 9080
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: follow
spec:
  host: follow
  subsets:
  - name: v1
    labels:
      version: v1
